@@ -11,6 +11,8 @@ Version 2.8.0
 -------------
 (not released yet)
 
+- Added `pygmentize -C` option to guess a lexer from content
+
 - Fix escapes in JavaScript backtick strings (#1679)
 - Make guessing prefer Python 3 lexer
 - Do not guess MIME or SQL without reason
